--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" rowHeight="3:1">
+<mat-grid-list [cols]="breakpoint" rowHeight="3:1" (window:resize)="onResize($event)">
     <mat-grid-tile>
         <mat-card>
             <mat-card-title>Overdue Rentals</mat-card-title>
