--- a/client/src/app/navigation/navigation.component.html
+++ b/client/src/app/navigation/navigation.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="">Home</a>
       <a mat-list-item routerLink="/inventory">Inventory</a>
       <a mat-list-item routerLink="/rentals">Rentals</a>
+      <a mat-list-item routerLink="/customers">Customers</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
