upgrade inventory child nav

--- a/client/src/app/inventory/inventory.component.html
+++ b/client/src/app/inventory/inventory.component.html
@@ -1,3 +1,8 @@
 <h1>Inventory component works</h1>
-<a routerLink="search">Search</a>
+
+<nav mat-tab-nav-bar>
+    <a mat-tab-link routerLink="search">Search</a>
+    <a mat-tab-link>Add Item</a>
+</nav>
+
 <router-outlet></router-outlet>
