inventory child add-item component created

--- a/client/src/app/inventory/inventory.component.html
+++ b/client/src/app/inventory/inventory.component.html
@@ -2,7 +2,7 @@
 
 <nav mat-tab-nav-bar>
     <a mat-tab-link routerLink="search">Search</a>
-    <a mat-tab-link>Add Item</a>
+    <a mat-tab-link routerLink="add">Add Item</a>
 </nav>
 
 <router-outlet></router-outlet>
