--- a/client/src/app/inventory/add-item/add-item.component.html
+++ b/client/src/app/inventory/add-item/add-item.component.html
@@ -1,1 +1,43 @@
 <p>add-item works!</p>
+<div class="add-item-container">
+    <form [formGroup]="addItem">
+        <div>
+            <div>
+                <mat-form-field appearance="fill"
+                [floatLabel]='floatLabelControl.value'>
+                <mat-label>Item Name</mat-label>
+                <input matInput placeholder="Item Name" required>
+            </mat-form-field>
+
+            </div>
+            <div>
+                <mat-form-field appearance="fill"
+                [floatLabel]="floatLabelControl.value">
+              <mat-select required>
+                <mat-option value="1">1</mat-option>
+                <mat-option value="2">2</mat-option>
+                <mat-option value="3">3</mat-option>
+                <mat-option value="4">4</mat-option>
+                <mat-option value="5">5</mat-option>
+              </mat-select>
+              <mat-label>Quantity</mat-label>
+            </mat-form-field>
+            </div>
+
+            <div>
+                <mat-form-field appearance="fill"
+                [floatLabel]="floatLabelControl.value">
+              <mat-select required>
+                <mat-option value="Paddling">Paddling</mat-option>
+                <mat-option value="Rock Climbing">Rock Climbing</mat-option>
+                <mat-option value="Camping">Camping</mat-option>
+                <mat-option value="Backpacking">Backpacking</mat-option>
+                <mat-option value="Surfing">Surfing</mat-option>
+              </mat-select>
+              <mat-label>Category</mat-label>
+            </mat-form-field>
+            </div>
+        </div>
+
+    </form>
+</div>
