--- a/client/src/app/customers/customers.component.html
+++ b/client/src/app/customers/customers.component.html
@@ -1,1 +1,8 @@
 <p>customers works!</p>
+
+<nav mat-tab-nav-bar>
+    <a mat-tab-link routerLink="search">Search</a>
+    <a mat-tab-link routerLink="add">Add Item</a>
+</nav>
+
+<router-outlet></router-outlet>
