--- a/client/src/app/inventory/add-item/add-item.component.html
+++ b/client/src/app/inventory/add-item/add-item.component.html
@@ -1,19 +1,19 @@
 <p>add-item works!</p>
 <div class="add-item-container">
-    <form [formGroup]="addItem">
+    <form [formGroup]="addItem" (ngSubmit)="onAddItem()">
         <div>
             <div>
                 <mat-form-field appearance="fill"
                 [floatLabel]='floatLabelControl.value'>
-                <mat-label>Item Name</mat-label>
-                <input matInput placeholder="Item Name" required>
+                <mat-label for="name">Item Name</mat-label>
+                <input matInput placeholder="Item Name" required formControlName="name">
             </mat-form-field>
 
             </div>
             <div>
                 <mat-form-field appearance="fill"
                 [floatLabel]="floatLabelControl.value">
-              <mat-select required>
+              <mat-select required formControlName="quantity">
                 <mat-option value="1">1</mat-option>
                 <mat-option value="2">2</mat-option>
                 <mat-option value="3">3</mat-option>
@@ -27,7 +27,7 @@
             <div>
                 <mat-form-field appearance="fill"
                 [floatLabel]="floatLabelControl.value">
-              <mat-select required>
+              <mat-select required formControlName="category">
                 <mat-option value="Paddling">Paddling</mat-option>
                 <mat-option value="Rock Climbing">Rock Climbing</mat-option>
                 <mat-option value="Camping">Camping</mat-option>
@@ -38,6 +38,6 @@
             </mat-form-field>
             </div>
         </div>
-
+        <button>This is the button</button>
     </form>
 </div>
