customer module and DB created

--- a/client/src/app/customers/customers.component.html
+++ b/client/src/app/customers/customers.component.html
@@ -1,8 +1,7 @@
-<p>customers works!</p>
 
 <nav mat-tab-nav-bar>
     <a mat-tab-link routerLink="search">Search</a>
-    <a mat-tab-link routerLink="add">Add Item</a>
+    <a mat-tab-link routerLink="add">Add Customer</a>
 </nav>
 
 <router-outlet></router-outlet>
